[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-simulator"
version = "0.1.0"
description = "Open-loop load generator to find the TTFT/ITL knee of a self-hosted LLM serving setup"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27", "numpy>=1.24"]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[project.scripts]
inference-simulator = "inference_simulator.__main__:main"

[tool.setuptools]
packages = ["inference_simulator"]
